--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,10 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Project specific
+data/content-library-cim2/
+data/chroma/
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
