Fix data source chunking and integrate semantic chunking with ingestion pipeline

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ VOYAGE_API_KEY=your_voyage_api_key_here
 CHROMA_DB_PATH=./data/chromadb
 CHROMA_SERVER_HOST=localhost
 CHROMA_SERVER_PORT=8000
+EXASPERATION_DB_PATH=./data/local_chromadb
+
+# Chunking Configuration
+EXASPERATION_USE_SEMANTIC_CHUNKING=true  # Set to false to use standard chunking
 
 # Application Settings
 DEBUG_MODE=True
@@ -14,4 +18,14 @@ LOG_LEVEL=INFO
 APP_PORT=8080
 
 # Web Interface
-API_BASE_URL=http://localhost:8080
+API_BASE_URL=http://localhost:8080/v1
+
+# API Authentication and Rate Limiting
+EXASPERATION_API_KEY=test_key_1234567890
+API_RATE_LIMIT=60
+API_CONCURRENT_LIMIT=5
+
+# Model Settings
+LLM_MODEL=claude-3-5-sonnet
+LLM_TEMPERATURE=0.2
+LLM_MAX_TOKENS=4096
