--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+chromadb_venv
 # C extensions
 *.so
 
@@ -161,8 +161,22 @@ dmypy.json
 cython_debug/
 
 # Project specific
-data/content-library-cim2/
-data/chroma/
+data/
+results/
+**/api_venv/
+**/frontend_venv/
+chromadb_venv/
+ingestion_stats.json
+kurl.sh
+*.bak
+api_server.pid
+
+# Docker and deployment files that should be tracked
+!.dockerignore
+
+# Documentation that should be tracked
+!documentation/UI_CHANGES.md
+!documentation/*.md
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
@@ -176,3 +190,15 @@ data/chroma/
 
 # PyPI configuration file
 .pypirc
+test_metadata.py
+test_initialize_db.py
+test_ingestion_stats.json
+test_direct_ingestion.py
+test_create_collection.py
+test_chroma_persistence.py
+test_batch_ingestion.py
+
+**/CLAUDE.local.md
+temp_files/
+new_code/
+
